--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,11 @@ perf.data*
 
 Cargo.lock
 
-lindera-ipadic-*-*
-mecab-ipadic-*-*
-unidic-mecab-*_src
-mecab-ko-dic-*-*
+lindera-ipadic-2.7.0-20070801
+mecab-ipadic-neologd-0.0.7
+# mecab-ipadic-*-*
+# unidic-mecab-*_src
+# mecab-ko-dic-*-*
 CC-CEDICT-MeCab-master
 
 flamegraph.svg
