--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -14,16 +14,19 @@ license = "MIT"
 [features]
 default = []  # No directories included
 ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
-unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
-ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
-cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
 ipadic-compress = ["lindera-tokenizer/ipadic-compress"]  # Compress IPADIC
-unidic-compress = ["lindera-tokenizer/unidic-compress"]  # Compress UniDic
-ko-dic-compress = ["lindera-tokenizer/ko-dic-compress"]  # Compress ko-dic
-cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CEDICT
 ipadic-filter = ["lindera-filter/ipadic"]  # Include filters for IPADIC
+ipadic-neologd = ["lindera-tokenizer/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
+ipadic-neologd-compress = ["lindera-tokenizer/ipadic-neologd-compress"]  # Compress IPADIC NEologd
+ipadic-neologd-filter = ["lindera-filter/ipadic-neologd"]  # Include filters for IPADIC NEologd
+unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
+unidic-compress = ["lindera-tokenizer/unidic-compress"]  # Compress UniDic
 unidic-filter = ["lindera-filter/unidic"]  # Include filters for UniDic
+ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
+ko-dic-compress = ["lindera-tokenizer/ko-dic-compress"]  # Compress ko-dic
 ko-dic-filter = ["lindera-filter/ko-dic"]  # Include filters for ko-dic
+cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
+cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CEDICT
 cc-cedict-filter = ["lindera-filter/cc-cedict"]  # Include filters for CC-CEDICT
 
 [dependencies]
@@ -37,6 +40,7 @@ lindera-core = { version = "0.24.0", path = "../lindera-core" }
 lindera-dictionary = { version = "0.24.0", path = "../lindera-dictionary" }
 lindera-filter = { version = "0.24.0", path = "../lindera-filter" }
 lindera-ipadic-builder = { version = "0.24.0", path = "../lindera-ipadic-builder" }
+lindera-ipadic-neologd-builder = { version = "0.24.0", path = "../lindera-ipadic-neologd-builder" }
 lindera-ko-dic-builder = { version = "0.24.0", path = "../lindera-ko-dic-builder" }
 lindera-tokenizer = { version = "0.24.0", path = "../lindera-tokenizer" }
 lindera-unidic-builder = { version = "0.24.0", path = "../lindera-unidic-builder" }
