--- a/lindera-filter/Cargo.toml
+++ b/lindera-filter/Cargo.toml
@@ -14,10 +14,15 @@ license = "MIT"
 [features]
 default = []  # No directories included
 ipadic = ["lindera-dictionary/ipadic"]  # Japanese dictionary included
+ipadic-filter = []
 ipadic-neologd = ["lindera-dictionary/ipadic-neologd"]  # Japanese dictionary included
+ipadic-neologd-filter = []
 unidic = ["lindera-dictionary/unidic"]  # Japanese dictionary included
+unidic-filter = []
 ko-dic = ["lindera-dictionary/ko-dic"]  # Korean dictionary included
+ko-dic-filter = []
 cc-cedict = ["lindera-dictionary/cc-cedict"]  # Chinese dictionary included
+cc-cedict-filter = []
 
 [dependencies]
 anyhow = "1.0.68"
@@ -35,6 +40,7 @@ yada = "0.5.0"
 
 lindera-core = { version = "0.25.0", path = "../lindera-core" }
 lindera-dictionary = { version = "0.25.0", path = "../lindera-dictionary" }
+lindera-tokenizer = { version = "0.25.0", path = "../lindera-tokenizer" }
 
 [dev-dependencies]
 once_cell = "1.17.0"
