--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -16,16 +16,16 @@ cc-cedict = ["encoding", "zip"]
 compress = ["lindera-cc-cedict-builder/compress", "lindera-decompress"]
 
 [dependencies]
-bincode = "1.3.3"
-byteorder = "1.4.3"
-once_cell = "1.18.0"
+bincode.workspace = true
+byteorder.workspace = true
+once_cell.workspace = true
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.27.1", path = "../lindera-decompress", optional = true }
+lindera-core.workspace = true
+lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
-encoding = { version = "0.2.33", optional = true }
-zip = { version = "0.6.6", optional = true }
+encoding = { workspace = true, optional = true }
+zip = { workspace = true, optional = true }
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-cc-cedict-builder = { version = "0.27.1", path = "../lindera-cc-cedict-builder"}
+lindera-core.workspace = true
+lindera-cc-cedict-builder.workspace = true
