--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -30,19 +30,19 @@ cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CED
 cc-cedict-filter = ["lindera-analyzer/cc-cedict-filter"]  # Include filters for CC-CEDICT
 
 [dependencies]
-anyhow = "1.0.71"
-clap = { version = "4.3.11", features = ["derive", "cargo"] }
-serde_json = "1.0.100"
+anyhow.workspace = true
+clap.workspace = true
+serde_json.workspace = true
 
-lindera-analyzer = { version = "0.27.1", path = "../lindera-analyzer" }
-lindera-cc-cedict-builder = { version = "0.27.1", path = "../lindera-cc-cedict-builder" }
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-dictionary = { version = "0.27.1", path = "../lindera-dictionary" }
-lindera-ipadic-builder = { version = "0.27.1", path = "../lindera-ipadic-builder" }
-lindera-ipadic-neologd-builder = { version = "0.27.1", path = "../lindera-ipadic-neologd-builder" }
-lindera-ko-dic-builder = { version = "0.27.1", path = "../lindera-ko-dic-builder" }
-lindera-tokenizer = { version = "0.27.1", path = "../lindera-tokenizer" }
-lindera-unidic-builder = { version = "0.27.1", path = "../lindera-unidic-builder" }
+lindera-analyzer.workspace = true
+lindera-cc-cedict-builder.workspace = true
+lindera-core.workspace = true
+lindera-dictionary.workspace = true
+lindera-ipadic-builder.workspace = true
+lindera-ipadic-neologd-builder.workspace = true
+lindera-ko-dic-builder.workspace = true
+lindera-tokenizer.workspace = true
+lindera-unidic-builder.workspace = true
 
 [[bin]]
 name = "lindera"
