--- a/lindera-core/Cargo.toml
+++ b/lindera-core/Cargo.toml
@@ -12,12 +12,12 @@ categories = ["text-processing"]
 license = "MIT"
 
 [dependencies]
-anyhow = "1.0.71"
-bincode = "1.3.3"
-byteorder = "1.4.3"
-encoding_rs = "0.8.32"
-log = "0.4.19"
-once_cell = "1.18.0"
-serde = {version="1.0.167", features = ["derive"] }
-thiserror = "1.0.43"
-yada = "0.5.0"
+anyhow.workspace = true
+bincode.workspace = true
+byteorder.workspace = true
+encoding_rs.workspace = true
+log.workspace = true
+once_cell.workspace = true
+serde.workspace = true
+thiserror.workspace = true
+yada.workspace = true
