--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -16,18 +16,18 @@ ipadic-neologd = ["encoding", "flate2", "tar", "ureq"]
 compress = ["lindera-ipadic-neologd-builder/compress", "lindera-decompress"]
 
 [dependencies]
-bincode = "1.3.3"
-byteorder = "1.4.3"
-once_cell = "1.18.0"
+bincode.workspace = true
+byteorder.workspace = true
+once_cell.workspace = true
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.27.1", path = "../lindera-decompress", optional = true }
+lindera-core.workspace = true
+lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
-encoding = { version = "0.2.33", optional = true }
-flate2 = { version = "1.0.26", optional = true }
-tar = { version = "0.4.38", optional = true }
-ureq = { version = "2.7.1", default-features = false, features = ["tls"], optional = true }
+encoding = { workspace = true, optional = true }
+flate2 = { workspace = true, optional = true }
+tar = { workspace = true, optional = true }
+ureq = { workspace = true, optional = true }
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-ipadic-neologd-builder = { version = "0.27.1", path = "../lindera-ipadic-neologd-builder"}
+lindera-core.workspace = true
+lindera-ipadic-neologd-builder.workspace = true
