--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -16,17 +16,17 @@ ipadic = ["encoding", "flate2", "tar"]
 compress = ["lindera-ipadic-builder/compress", "lindera-decompress"]
 
 [dependencies]
-bincode = "1.3.3"
-byteorder = "1.4.3"
-once_cell = "1.18.0"
+bincode.workspace = true
+byteorder.workspace = true
+once_cell.workspace = true
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.27.1", path = "../lindera-decompress", optional = true }
+lindera-core.workspace = true
+lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
-encoding = { version = "0.2.33", optional = true }
-flate2 = { version = "1.0.26", optional = true }
-tar = { version = "0.4.38", optional = true }
+encoding = { workspace = true, optional = true }
+flate2 = { workspace = true, optional = true }
+tar = { workspace =true, optional = true }
 
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-ipadic-builder = { version = "0.27.1", path = "../lindera-ipadic-builder"}
+lindera-core.workspace = true
+lindera-ipadic-builder.workspace = true
