--- a/lindera-ko-dic-builder/Cargo.toml
+++ b/lindera-ko-dic-builder/Cargo.toml
@@ -15,16 +15,16 @@ license = "MIT"
 compress = ["lindera-compress"]
 
 [dependencies]
-anyhow = "1.0.71"
-bincode = "1.3.3"
-byteorder = "1.4.3"
-csv = "1.2.2"
-encoding = "0.2.33"
-env_logger = "0.10.0"
-glob = "0.3.1"
-log = "0.4.19"
-yada = "0.5.0"
+anyhow.workspace = true
+bincode.workspace = true
+byteorder.workspace = true
+csv.workspace = true
+encoding.workspace = true
+env_logger.workspace = true
+glob.workspace = true
+log.workspace = true
+yada.workspace = true
 
-lindera-compress = { version = "0.27.1", path = "../lindera-compress", optional = true }
-lindera-core = { version = "0.27.1", path = "../lindera-core" }
-lindera-decompress = { version = "0.27.1", path = "../lindera-decompress" }
+lindera-compress = { workspace = true, optional = true }
+lindera-core.workspace = true
+lindera-decompress.workspace = true
